kube-derive/tests/ui/cel_requires_derived_schema.stderr
error: #[kube(cel)] requires a derived schema; it cannot be combined with `schema = "manual"`
 --> tests/ui/cel_requires_derived_schema.rs:9:10
  |
9 | #[derive(CustomResource, Serialize, Deserialize, Debug, Clone, JsonSchema)]
  |          ^^^^^^^^^^^^^^
  |
  = note: this error originates in the derive macro `CustomResource` (in Nightly builds, run with -Z macro-backtrace for more info)

error[E0277]: the trait bound `Foo: JsonSchema` is not satisfied
 --> tests/ui/cel_requires_derived_schema.rs:9:10
  |
9 | #[derive(CustomResource, Serialize, Deserialize, Debug, Clone, JsonSchema)]
  |          ^^^^^^^^^^^^^^ unsatisfied trait bound
  |
help: the trait `JsonSchema` is not implemented for `Foo`
 --> tests/ui/cel_requires_derived_schema.rs:9:10
  |
9 | #[derive(CustomResource, Serialize, Deserialize, Debug, Clone, JsonSchema)]
  |          ^^^^^^^^^^^^^^
  = help: the following other types implement trait `JsonSchema`:
            &'a T
            &'a mut T
            ()
            (T0, T1)
            (T0, T1, T2)
            (T0, T1, T2, T3)
            (T0, T1, T2, T3, T4)
            (T0, T1, T2, T3, T4, T5)
          and $N others
note: required by a bound in `SchemaGenerator::into_root_schema_for`
 --> $CARGO/schemars-$VERSION/src/generate.rs
  |
  |     pub fn into_root_schema_for<T: ?Sized + JsonSchema>(mut self) -> Schema {
  |                                             ^^^^^^^^^^ required by this bound in `SchemaGenerator::into_root_schema_for`
  = note: this error originates in the derive macro `CustomResource` (in Nightly builds, run with -Z macro-backtrace for more info)
